--- a/Style.css
+++ b/Style.css
@@ -3,19 +3,14 @@ html{height: 100%;width: 100%;background-color: white;}
 
 h1{ color: rgb(0, 0, 0);   height:52px;
     width:500px;
-    border:4px solid rgb(255, 255, 255); position: absolute;
-    top: 50%;
+    border:10px solid hsl(0, 0%, 100%); position: absolute;
+    top: 10%;
     left: 50%;bottom: 55%;
     transform: translate(-50%, -50%);text-align: center;text-transform: uppercase;
   } 
   #brief{top: 10%; left:40%;position: absolute;width: 400px;color: rgb(0, 0, 0);font-size: 15 px;text-align: center;}
-  a:hover{text-decoration: underline;border-color: brown;}
+  a:hover{text-decoration: underline dotted;border-color: brown;}
   a{font-size: 30px;}
 
 body{justify-content: center;}
-h1:hover{text-decoration: underline;}
-
-a {
-  color:rgb(0, 0, 0);
-text-decoration:none;
-}
+/*h1:hover{text-decoration: underline;*/
