--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,9 @@
-html{height: 100%;width: 100%;background-color: white;}
+html{height: 100%;width: 100%;background-color: rgb(0, 0, 0);}
 
 
-h1{ color: rgb(0, 0, 0);   height:52px;
+h1{ color: rgb(255, 255, 255);   height:52px;
     width:500px;
-    border:10px solid hsl(0, 0%, 100%); position: absolute;
+    border:10px solid hsl(0, 0%, 0%); position: absolute;
     top: 10%;
     left: 50%;bottom: 55%;
     transform: translate(-50%, -50%);text-align: center;text-transform: uppercase;
